--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-cv.aux
-cv.bbl
-cv.bcf
-cv.blg
-cv.fdb_latexmk
-cv.fls
-cv.log
-cv.out
-cv.synctex.gz
-cv.run.xml
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.run.xml
+*.synctex.gz
