--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,7 +62,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DIR: .
-      FILE: cv # Keep this as is if your source file is still cv.tex
+      FILE: RyanOtt-CV # Updated to match the new LaTeX file name without the extension
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
@@ -71,14 +71,14 @@ jobs:
         with:
           root_file: ${{ env.FILE }}
           working_directory: ${{ env.DIR }}
-      - name: Rename PDF
-        run: mv ${{ env.DIR }}/${{ env.FILE }}.pdf ${{ env.DIR }}/RyanOtt_CV.pdf
+      # - name: Rename PDF (Optional)
+      #   run: mv ${{ env.DIR }}/${{ env.FILE }}.pdf ${{ env.DIR }}/RyanOtt-CV.pdf
       - name: move
-        run: mkdir -p github_artifacts && mv ${{ env.DIR }}/RyanOtt_CV.pdf ./github_artifacts/
+        run: mkdir -p github_artifacts && mv ${{ env.DIR }}/RyanOtt-CV.pdf ./github_artifacts/
       - name: Upload pdf as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: RyanOtt_CV.pdf
+          name: RyanOtt-CV.pdf
           path: ./github_artifacts
   deploy:
     needs: [build]
